# parquet2bcf

./: 404.html  Cargo.toml  Dockerfile  README.md  api_reference.html  contributing.html  examples.html  installation.html  introduction.html  print.html  searchindex.js  toc.html  toc.js  usage.html
.github/workflows/: docker.yaml  docs.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
src/: main.rs
